Remove background for line start labels.

--- a/css/cm/sbvr.css
+++ b/css/cm/sbvr.css
@@ -7,15 +7,15 @@
 
 span.cm-sbvr-startTerm {
 	color: #A22;
-	background-color: #FCC;
+/* 	background-color: #FCC; */
 }
 span.cm-sbvr-startFactType {
 	color: #A70;
-	background-color: #EEA;
+/* 	background-color: #EEA; */
 }
 span.cm-sbvr-startRule {
 	color: #299;
-	background-color: #BFF;
+/* 	background-color: #BFF; */
 }
 
 /* Noun */
