-"Save File" button implemented by downloadify(flash) with no hover effect. -"Load File" button implemented by HTML File API. Currently it supports Chrome and Firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,12 @@ input[disabled] {
 	color: grey;
 }
 
-
+input[type="file"].hidden-input {
+	visibility: hidden;
+	width: 0;
+	height: 0;
+	position: absolute;
+}
 
 
 
