--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ input[disabled] {
 	color: grey;
 }
 
-input[type="file"].hidden-input {
+input.hidden-input {
 	visibility: hidden;
 	width: 0;
 	height: 0;
