--- a/src/client/codemirror-ometa-bridge/src/sbvr.css
+++ b/src/client/codemirror-ometa-bridge/src/sbvr.css
@@ -20,7 +20,7 @@ span.cm-sbvr-startRule {
 }
 
 /* Noun */
-span.cm-sbvr-term {
+span.cm-sbvr-Term {
 	color: #108070;
 	text-decoration: underline;
 }
