--- a/src/client/codemirror-ometa-bridge/src/sbvr.css
+++ b/src/client/codemirror-ometa-bridge/src/sbvr.css
@@ -25,7 +25,7 @@ span.cm-sbvr-Term {
 	text-decoration: underline;
 }
 
-span.cm-sbvr-verb {
+span.cm-sbvr-Verb {
 	color: blue;
 	font-style: italic;
 }
