Update requirejs to 1.0.8 and remove version from filename to ease future updates.

--- a/src/client/frame-glue/src/index.jade
+++ b/src/client/frame-glue/src/index.jade
@@ -2,7 +2,7 @@
 head
     meta(charset='utf-8')
     title rulemotion canvas
-    script(src='external/require-1.0.4.min.js')
+    script(src='external/require.min.js')
     script(src='common/config/requirejs.js')
     script
       requirejs(['frame-glue/main']);
