--- a/src/client/codemirror-ometa-bridge/src/sbvr.css
+++ b/src/client/codemirror-ometa-bridge/src/sbvr.css
@@ -29,13 +29,13 @@ span.cm-sbvr-Verb {
 	color: blue;
 	font-style: italic;
 }
-span.cm-sbvr-modRule {
+span.cm-sbvr-Modifier {
 	color: orange;
 }
 span.cm-sbvr-keyword {
 	color: orange;
 }
-span.cm-sbvr-num {
+span.cm-sbvr-Number {
 	color: purple;
 }
 
