Added login / signup button.

--- a/src/client/src/templates/main.html
+++ b/src/client/src/templates/main.html
@@ -1,5 +1,5 @@
-<div id="header">
-	<div class="btn-group">
+<header>
+	<div class="btn-toolbar">
 		<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 			Examples
 			<span class="caret"></span>
@@ -12,18 +12,13 @@
 				<a href="#/lPWulm">Universities</a>
 			</li>
 		</ul>
-		<button id="new-model-button" class="btn">New</button>
-		<button id="publish-model-button" class="btn">Publish</button>
-		<button id="login-button" class="btn btn-info">Login</a>
+		<div class="btn-group">
+			<button class="btn">New</button>
+			<button class="btn">Publish</button>
+		</div>
+		<button class="btn btn-link">Login/Sign up</button>
 	</div>
 	<h1><img src="static/logo.png" alt="Rulemotion" />SBVR Lab 2.0</h1>
 	<ul id="tabs" class="nav nav-tabs"></ul>
-</div>
+</header>
 <div id="content" class="tab-content"></div>
-
-<div id="publishSuccess" class="alert alert-success">
-	<button type="button" class="close">×</button>
-	Well done! Your model was published at <a href=""></a>
-</div>
-
-<div id="modal"></div>
