--- a/src/client/src/static/main.css
+++ b/src/client/src/static/main.css
@@ -3,7 +3,7 @@ body {
 	min-width: 720px;
 }
 
-#header {
+header {
 	background: #e7e9eb url("header_bg.jpg") left top no-repeat;
 }
 
@@ -53,7 +53,7 @@ div.CodeMirror {
 	border: 0;
 }
 
-.btn-group {
+.btn-toolbar {
 	float: right;
 	margin: 25px 10px 0;
 }
