--- a/src/client/codemirror-ometa-bridge/src/sbvr.css
+++ b/src/client/codemirror-ometa-bridge/src/sbvr.css
@@ -31,6 +31,10 @@ span.cm-sbvr-Name {
 	text-decoration: underline;
 	border-bottom: 1px solid #108070;
 }
+span.cm-sbvr-AttrGuidanceType {
+	color: #108070;
+	text-decoration: underline;
+}
 
 span.cm-sbvr-Verb {
 	color: blue;
