HTML tag mismatch

--- a/src/client/src/templates/main.html
+++ b/src/client/src/templates/main.html
@@ -12,11 +12,9 @@
 				<a href="#/lPWulm">Universities</a>
 			</li>
 		</ul>
-		<div class="btn-group">
-			<button class="btn">New</button>
-			<button class="btn">Publish</button>
-		</div>
-		<button class="btn btn-link">Login/Sign up</button>
+		<button id="new-model-button" class="btn">New</button>
+		<button id="publish-model-button" class="btn">Publish</button>
+		<button id="login-button" class="btn btn-info">Login</button>
 	</div>
 	<h1><img src="static/logo.png" alt="Rulemotion" />SBVR Lab 2.0</h1>
 	<ul id="tabs" class="nav nav-tabs"></ul>
