Fix CSS problems (AKA abominations)

--- a/src/client/src/templates/main.html
+++ b/src/client/src/templates/main.html
@@ -1,5 +1,5 @@
 <header>
-	<div class="btn-toolbar">
+	<div class="btn-group">
 		<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 			Examples
 			<span class="caret"></span>
@@ -20,3 +20,4 @@
 	<ul id="tabs" class="nav nav-tabs"></ul>
 </header>
 <div id="content" class="tab-content"></div>
+<div id="modal"></div>
