Add missing success alert box

--- a/src/client/src/templates/main.html
+++ b/src/client/src/templates/main.html
@@ -30,3 +30,7 @@
 	<ul id="tabs" class="nav nav-tabs"></ul>
 </header>
 <div id="content" class="tab-content"></div>
+<div id="publishSuccess" class="alert alert-success">
+	<button type="button" class="close">×</button>
+	Well done! Your model was published at <a href=""></a>
+</div>
