--- a/src/client/src/templates/main.html
+++ b/src/client/src/templates/main.html
@@ -12,6 +12,9 @@
 				<li>
 					<a href="#/lPWulm">Universities</a>
 				</li>
+				<li>
+					<a href="#/iVdERt">EU-Rent</a>
+				</li>
 			</ul>
 			<button id="new-model-button" class="btn">New</button>
 			<button id="publish-model-button" class="btn">Publish</button>
